Fix handbrake not showing correctly

--- a/src/app/control-views/steering-view.component.scss
+++ b/src/app/control-views/steering-view.component.scss
@@ -35,12 +35,16 @@
   justify-content: flex-end;
 }
 
+.steering-component {
+  // clip-path: circle(140px at 175px 175px);
+}
+
 .map-container {
   width: 100%;
   height: 100%;
   // clip-path: path('M 70 170 A 105 105 180 0 1 280 170L280 190L70 190Z');
   overflow: hidden;
-  clip-path: circle(105px at 175px 170px);
+  clip-path: circle(110px at 175px 175px);
 }
 
 .grid-element {
